feat: Pakiman view

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAKIMAN! 🔥💧🌱</title>
+    <title>¡PAKIMAN! 🔥💧🌱</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&family=Teko:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>PAKIMAN! 🔥💧🌱</h1>
+    <h1 class="title">¡PAKIMAN!</h1>
+    <main class="main">
+        <p class="subtitle">Selecciona un Pakiman:</p>
+        <section class="main-section" id="pakimans-section">
+            <!-- Pakimans Cards -->
+        </section>
+        <button class="button-select">
+            <a class="button-link" href="#">Seleccionar</a>
+        </button>
+    </main>
     <script src="./js/index.js"></script>
 </body>
 </html>
