feat: change main to map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 class="title">¡PAKIMAN!</h1>
-    <main class="main" style="display: none;">
+    <main class="main">
         <p class="subtitle">Selecciona un Pakiman:</p>
         <section class="main-section" id="pakimans-section">
             <!-- Pakimans Cards -->
