--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="map-content">
             <canvas id="mapCanvas"></canvas>
             <div class="map-controls">
-                <button > Arriba </button>
+                <button id="up"> Arriba </button>
                 <div>
-                    <button> Izquierda </button>
-                    <button> Derecha </button>
+                    <button id="left"> Izquierda </button>
+                    <button  id="right"> Derecha </button>
                 </div>
-                <button> Abajo </button>
+                <button id="down"> Abajo </button>
             </div>
             <div style="display: none;">
                 <img src="./assets/images/cauchin.png" id="cauchinImg" alt="Cauchin Image"/>
