--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
             </div>
         </div>
     </section>
+    <section class="battle">
+        <p class="subtitle">Combate:</p>
+        <div class="battle-content">
+            <div class="battle-pakiman" id="pakiman1"></div>
+            <div class="battle-pakiman" id="pakiman2"></div>
+        </div>
+        <button class="button-battle">
+            <a class="button-link" href="#">Atacar</a>
+        </button>
+    </section>
     <script src="./js/index.js"></script>
 </body>
 </html>
