--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <a class="button-link" href="#">Atacar</a>
         </button>
     </section>
+    <section class="win">
+    </section>
     <script src="./js/index.js"></script>
 </body>
 </html>
